--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,6 +11,12 @@
     <!-- Bootstrap -->
     <link href="styles/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles/css/styles.css" rel="stylesheet">
+    <!-- AngularJS -->
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+	<!-- Firebase -->
+	<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+	<!-- AngularFire -->
+	<script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
